added an updated XGBoost notebook and a neural network notebook

--- a/jupyter_notebooks/XGBoost_soilM_model.ipynb
+++ b/jupyter_notebooks/XGBoost_soilM_model.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import xgboost\n",
@@ -27,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,9 +51,9 @@
     "    y_true, y_pred = np.array(y_true), np.array(y_pred)\n",
     "    return np.mean(np.abs((y_true - y_pred) / y_true))\n",
     "\n",
-    "def xgb_iter(X, y, params, test_size=0.2, iter=100):\n",
+    "def xgb_iter(X, y, params, test_size=0.2, itera=100):\n",
     "    mape_list, mae_list, rmse_list = [], [], []\n",
-    "    for i in range(iter):\n",
+    "    for i in range(itera):\n",
     "        # split data into train and test sets\n",
     "        test_size = 0.20\n",
     "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size)\n",
@@ -97,21 +95,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "ndre_data = pd.read_csv('../HydroSatML/data/final_join_subbed_missing_soilM.csv')\n",
-    "ndre_data_sub_30 = pd.read_csv('../HydroSatML/data/final_join_subbed_bare_soil.csv')\n",
-    "ndre_data_sub_40 = pd.read_csv('../HydroSatML/data/final_join_subbed_bare_soil_40.csv')\n",
+    "# ndre_data = pd.read_csv('../HydroSatML/data/final_join_subbed_missing_soilM.csv')\n",
+    "# ndre_data_sub_30 = pd.read_csv('../HydroSatML/data/final_join_subbed_bare_soil.csv')\n",
+    "# ndre_data_sub_40 = pd.read_csv('../HydroSatML/data/final_join_subbed_bare_soil_40.csv')\n",
     "ndre_data_lag_40 = pd.read_csv('../HydroSatML/data/final_join_subbed_bare_soil_with_lag_40.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -130,7 +126,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,19 +137,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# keep_cols = ['avg_soilM', 'average_adjacent', 'precip.cm', 'tair.C', 'rh.pct', 'wind_sp.m_per_s', \n",
     "#              'irradiance.w_per_m.2', 'sand_1', 'sand_2', 'sand_3', 'silt_1', 'silt_2', 'silt_3', 'clay_1', \n",
     "#              'clay_2', 'clay_3']\n",
-    "keep_cols = ['avg_soilM', 'average_adjacent', 'precip.cm', 'tair.C', 'rh.pct', 'wind_sp.m_per_s', \n",
+    "keep_cols = ['avg_soilM_l3', 'average_adjacent', 'precip.cm', 'tair.C', 'rh.pct', 'wind_sp.m_per_s', \n",
     "             'irradiance.w_per_m.2', 'avg_clay', 'avg_sand', 'avg_silt']\n",
     "\n",
-    "dataset = ndre_data_lag_40[keep_cols]\n",
+    "# dataset = ndre_data_lag_40[keep_cols]\n",
     "\n",
     "X = dataset.iloc[:,1:]\n",
     "X = X.values\n",
@@ -1621,177 +1615,300 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = dict(colsample_bytree=0.78, gamma=0.085, learning_rate=0.12, max_depth=4, \n",
+    "                     min_child_weight=5, n_estimators=2200, reg_alpha = 0.01, subsample=0.98)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 100 iteration 0 day lag"
+    "### 500 iteration 0 day lag"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keep_cols = ['avg_soilM', 'average_adjacent', 'precip.cm', 'tair.C', 'rh.pct', 'wind_sp.m_per_s', \n",
+    "             'irradiance.w_per_m.2', 'avg_clay', 'avg_sand', 'avg_silt']\n",
+    "\n",
+    "dataset = ndre_data_lag_40[keep_cols]\n",
+    "\n",
+    "X = dataset.iloc[:,1:]\n",
+    "X = X.values\n",
+    "y = dataset.iloc[:,0]\n",
+    "y = y.values\n",
+    "\n",
+    "mape0, mae0, rmse0 = xgb_iter(X, y, itera=500, params=params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'MAPE: 0.1009 ± 0.0158'"
+       "'MAPE: 0.1019 ± 0.0148'"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "'MAE: 0.0205 ± 0.0028'"
+       "'MAE: 0.0209 ± 0.0026'"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "'RMSE: 0.0311 ± 0.0048'"
+       "'RMSE: 0.0316 ± 0.0045'"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mape, mae, rmse = xgb_iter(X, y, iter=100, params=params)\n",
-    "\n",
-    "'MAPE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mape)), np.std(np.asarray(mape)))\n",
-    "'MAE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mae)), np.std(np.asarray(mae)))\n",
-    "'RMSE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(rmse)), np.std(np.asarray(rmse)))"
+    "'MAPE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mape0)), np.std(np.asarray(mape0)))\n",
+    "'MAE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mae0)), np.std(np.asarray(mae0)))\n",
+    "'RMSE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(rmse0)), np.std(np.asarray(rmse0)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 100 iterations 3 day lag"
+    "### 500 iterations 3 day lag"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keep_cols = ['avg_soilM_l3', 'average_adjacent', 'precip.cm', 'tair.C', 'rh.pct', 'wind_sp.m_per_s', \n",
+    "             'irradiance.w_per_m.2', 'avg_clay', 'avg_sand', 'avg_silt']\n",
+    "keep_cols_lasso = ['avg_soilM_l3', 'average_adjacent', 'precip.cm', 'tair.C', 'rh.pct', 'wind_sp.m_per_s', \n",
+    "                   'avg_sand', 'avg_silt']\n",
+    "dataset = ndre_data_lag_40[keep_cols_lasso]\n",
+    "\n",
+    "X = dataset.iloc[:,1:]\n",
+    "X = X.values\n",
+    "y = dataset.iloc[:,0]\n",
+    "y = y.values\n",
+    "\n",
+    "mape3_lass, mae3_lass, rmse3_lass = xgb_iter(X, y, itera=500, params=params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'MAPE: 0.0766 ± 0.0101'"
+       "'MAPE: 0.0758 ± 0.0097'"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "'MAE: 0.0176 ± 0.0021'"
+       "'MAE: 0.0175 ± 0.0021'"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "'RMSE: 0.0254 ± 0.0034'"
+       "'RMSE: 0.0252 ± 0.0035'"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mape, mae, rmse = xgb_iter(X, y, iter=100, params=params)\n",
-    "\n",
-    "'MAPE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mape)), np.std(np.asarray(mape)))\n",
-    "'MAE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mae)), np.std(np.asarray(mae)))\n",
-    "'RMSE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(rmse)), np.std(np.asarray(rmse)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 100 iterations 5 day lag"
+    "'MAPE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mape3)), np.std(np.asarray(mape3)))\n",
+    "'MAE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mae3)), np.std(np.asarray(mae3)))\n",
+    "'RMSE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(rmse3)), np.std(np.asarray(rmse3)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'MAPE: 0.0792 ± 0.0114'"
+       "'MAPE: 0.0774 ± 0.0097'"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "'MAE: 0.0183 ± 0.0025'"
+       "'MAE: 0.0179 ± 0.0021'"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "'RMSE: 0.0265 ± 0.0040'"
+       "'RMSE: 0.0257 ± 0.0033'"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mape, mae, rmse = xgb_iter(X, y, iter=100, params=params)\n",
-    "\n",
-    "'MAPE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mape)), np.std(np.asarray(mape)))\n",
-    "'MAE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mae)), np.std(np.asarray(mae)))\n",
-    "'RMSE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(rmse)), np.std(np.asarray(rmse)))"
+    "'MAPE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mape3_lass)), np.std(np.asarray(mape3_lass)))\n",
+    "'MAE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mae3_lass)), np.std(np.asarray(mae3_lass)))\n",
+    "'RMSE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(rmse3_lass)), np.std(np.asarray(rmse3_lass)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 100 iterations 7 day lag"
+    "### 500 iterations 5 day lag"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keep_cols = ['avg_soilM_l5', 'average_adjacent', 'precip.cm', 'tair.C', 'rh.pct', 'wind_sp.m_per_s', \n",
+    "             'irradiance.w_per_m.2', 'avg_clay', 'avg_sand', 'avg_silt']\n",
+    "\n",
+    "dataset = ndre_data_lag_40[keep_cols]\n",
+    "\n",
+    "X = dataset.iloc[:,1:]\n",
+    "X = X.values\n",
+    "y = dataset.iloc[:,0]\n",
+    "y = y.values\n",
+    "\n",
+    "mape5, mae5, rmse5 = xgb_iter(X, y, itera=500, params=params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'MAPE: 0.0758 ± 0.0107'"
+       "'MAPE: 0.0775 ± 0.0102'"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'MAE: 0.0181 ± 0.0022'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'RMSE: 0.0261 ± 0.0036'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'MAPE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mape5)), np.std(np.asarray(mape5)))\n",
+    "'MAE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mae5)), np.std(np.asarray(mae5)))\n",
+    "'RMSE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(rmse5)), np.std(np.asarray(rmse5)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 500 iterations 7 day lag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keep_cols = ['avg_soilM_l7', 'average_adjacent', 'precip.cm', 'tair.C', 'rh.pct', 'wind_sp.m_per_s', \n",
+    "             'irradiance.w_per_m.2', 'avg_clay', 'avg_sand', 'avg_silt']\n",
+    "\n",
+    "dataset = ndre_data_lag_40[keep_cols]\n",
+    "\n",
+    "X = dataset.iloc[:,1:]\n",
+    "X = X.values\n",
+    "y = dataset.iloc[:,0]\n",
+    "y = y.values\n",
+    "\n",
+    "mape7, mae7, rmse7 = xgb_iter(X, y, itera=500, params=params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'MAPE: 0.0760 ± 0.0103'"
+      ]
+     },
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1801,28 +1918,61 @@
        "'MAE: 0.0179 ± 0.0022'"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "'RMSE: 0.0261 ± 0.0038'"
+       "'RMSE: 0.0260 ± 0.0036'"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mape, mae, rmse = xgb_iter(X, y, iter=100, params=params)\n",
-    "\n",
-    "'MAPE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mape)), np.std(np.asarray(mape)))\n",
-    "'MAE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mae)), np.std(np.asarray(mae)))\n",
-    "'RMSE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(rmse)), np.std(np.asarray(rmse)))"
+    "'MAPE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mape7)), np.std(np.asarray(mape7)))\n",
+    "'MAE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mae7)), np.std(np.asarray(mae7)))\n",
+    "'RMSE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(rmse7)), np.std(np.asarray(rmse7)))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_df = pd.DataFrame({'soilM_mae': mae0, 'soilM_mape': mape0, 'soilM_rmse': rmse0,\n",
+    "                          'soilM_l3_mae': mae3, 'soilM_l3_mape': mape3, 'soilM_l3_rmse': rmse3,\n",
+    "                          'soilM_l5_mae': mae5, 'soilM_l5_mape': mape5, 'soilM_l5_rmse': rmse5,\n",
+    "                          'soilM_l7_mae': mae7, 'soilM_l7_mape': mape7, 'soilM_l7_rmse': rmse7})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_df.to_csv('results_df_xgboost.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
