updated notebooks, and added the XGboost model which can be pickle loaded and used to predict

--- a/jupyter_notebooks/XGBoost_soilM_model.ipynb
+++ b/jupyter_notebooks/XGBoost_soilM_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "from xgboost import plot_importance\n",
     "from pymlx import *\n",
     "from catboost import CatBoostRegressor\n",
-    "\n",
+    "import pickle\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,9 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,17 +144,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ndre_val</th>\n",
+       "      <th>sensor</th>\n",
+       "      <th>field</th>\n",
+       "      <th>date</th>\n",
+       "      <th>data</th>\n",
+       "      <th>sensor_full_name</th>\n",
+       "      <th>depth_1</th>\n",
+       "      <th>depth_2</th>\n",
+       "      <th>depth_3</th>\n",
+       "      <th>year</th>\n",
+       "      <th>...</th>\n",
+       "      <th>l7_depth_1</th>\n",
+       "      <th>l7_depth_2</th>\n",
+       "      <th>l7_depth_3</th>\n",
+       "      <th>avg_soilM</th>\n",
+       "      <th>avg_soilM_l3</th>\n",
+       "      <th>avg_soilM_l5</th>\n",
+       "      <th>avg_soilM_l7</th>\n",
+       "      <th>avg_clay</th>\n",
+       "      <th>avg_sand</th>\n",
+       "      <th>avg_silt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.462688</td>\n",
+       "      <td>3</td>\n",
+       "      <td>AES</td>\n",
+       "      <td>2012-06-15</td>\n",
+       "      <td>2012-06-15</td>\n",
+       "      <td>A3-C</td>\n",
+       "      <td>0.276989</td>\n",
+       "      <td>0.307226</td>\n",
+       "      <td>0.353427</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.279558</td>\n",
+       "      <td>0.306075</td>\n",
+       "      <td>0.357298</td>\n",
+       "      <td>0.292107</td>\n",
+       "      <td>0.314126</td>\n",
+       "      <td>0.311718</td>\n",
+       "      <td>0.314310</td>\n",
+       "      <td>23.318945</td>\n",
+       "      <td>14.802122</td>\n",
+       "      <td>61.878934</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.528211</td>\n",
+       "      <td>4</td>\n",
+       "      <td>AES</td>\n",
+       "      <td>2012-06-15</td>\n",
+       "      <td>2012-06-15</td>\n",
+       "      <td>A4-C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.352251</td>\n",
+       "      <td>0.350256</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.349905</td>\n",
+       "      <td>0.354652</td>\n",
+       "      <td>0.352251</td>\n",
+       "      <td>0.342266</td>\n",
+       "      <td>0.345365</td>\n",
+       "      <td>0.352279</td>\n",
+       "      <td>24.822203</td>\n",
+       "      <td>15.398419</td>\n",
+       "      <td>59.779379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.423152</td>\n",
+       "      <td>5</td>\n",
+       "      <td>AES</td>\n",
+       "      <td>2012-06-15</td>\n",
+       "      <td>2012-06-15</td>\n",
+       "      <td>A5-C</td>\n",
+       "      <td>0.365335</td>\n",
+       "      <td>0.351863</td>\n",
+       "      <td>0.304977</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.380815</td>\n",
+       "      <td>0.354347</td>\n",
+       "      <td>0.307093</td>\n",
+       "      <td>0.358599</td>\n",
+       "      <td>0.346425</td>\n",
+       "      <td>0.347060</td>\n",
+       "      <td>0.347419</td>\n",
+       "      <td>21.736090</td>\n",
+       "      <td>16.315767</td>\n",
+       "      <td>61.948143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.411146</td>\n",
+       "      <td>6</td>\n",
+       "      <td>AES</td>\n",
+       "      <td>2012-06-15</td>\n",
+       "      <td>2012-06-15</td>\n",
+       "      <td>A6-C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.349015</td>\n",
+       "      <td>0.268693</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.353460</td>\n",
+       "      <td>0.270920</td>\n",
+       "      <td>0.349015</td>\n",
+       "      <td>0.308792</td>\n",
+       "      <td>0.310154</td>\n",
+       "      <td>0.312190</td>\n",
+       "      <td>24.200843</td>\n",
+       "      <td>14.188077</td>\n",
+       "      <td>61.611080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.493531</td>\n",
+       "      <td>7</td>\n",
+       "      <td>AES</td>\n",
+       "      <td>2012-06-15</td>\n",
+       "      <td>2012-06-15</td>\n",
+       "      <td>A7-C</td>\n",
+       "      <td>0.342275</td>\n",
+       "      <td>0.354701</td>\n",
+       "      <td>0.391153</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.344399</td>\n",
+       "      <td>0.363127</td>\n",
+       "      <td>0.402271</td>\n",
+       "      <td>0.348488</td>\n",
+       "      <td>0.367263</td>\n",
+       "      <td>0.368144</td>\n",
+       "      <td>0.369932</td>\n",
+       "      <td>23.860613</td>\n",
+       "      <td>14.655982</td>\n",
+       "      <td>61.483405</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 40 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ndre_val  sensor field        date        data sensor_full_name   depth_1  \\\n",
+       "0  0.462688       3   AES  2012-06-15  2012-06-15             A3-C  0.276989   \n",
+       "1  0.528211       4   AES  2012-06-15  2012-06-15             A4-C       NaN   \n",
+       "2  0.423152       5   AES  2012-06-15  2012-06-15             A5-C  0.365335   \n",
+       "3  0.411146       6   AES  2012-06-15  2012-06-15             A6-C       NaN   \n",
+       "4  0.493531       7   AES  2012-06-15  2012-06-15             A7-C  0.342275   \n",
+       "\n",
+       "    depth_2   depth_3  year    ...      l7_depth_1  l7_depth_2  l7_depth_3  \\\n",
+       "0  0.307226  0.353427  2012    ...        0.279558    0.306075    0.357298   \n",
+       "1  0.352251  0.350256  2012    ...             NaN    0.349905    0.354652   \n",
+       "2  0.351863  0.304977  2012    ...        0.380815    0.354347    0.307093   \n",
+       "3  0.349015  0.268693  2012    ...             NaN    0.353460    0.270920   \n",
+       "4  0.354701  0.391153  2012    ...        0.344399    0.363127    0.402271   \n",
+       "\n",
+       "   avg_soilM  avg_soilM_l3  avg_soilM_l5  avg_soilM_l7   avg_clay   avg_sand  \\\n",
+       "0   0.292107      0.314126      0.311718      0.314310  23.318945  14.802122   \n",
+       "1   0.352251      0.342266      0.345365      0.352279  24.822203  15.398419   \n",
+       "2   0.358599      0.346425      0.347060      0.347419  21.736090  16.315767   \n",
+       "3   0.349015      0.308792      0.310154      0.312190  24.200843  14.188077   \n",
+       "4   0.348488      0.367263      0.368144      0.369932  23.860613  14.655982   \n",
+       "\n",
+       "    avg_silt  \n",
+       "0  61.878934  \n",
+       "1  59.779379  \n",
+       "2  61.948143  \n",
+       "3  61.611080  \n",
+       "4  61.483405  \n",
+       "\n",
+       "[5 rows x 40 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ndre_data_lag_40_EXACT.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# keep_cols = ['avg_soilM', 'average_adjacent', 'precip.cm', 'tair.C', 'rh.pct', 'wind_sp.m_per_s', \n",
     "#              'irradiance.w_per_m.2', 'sand_1', 'sand_2', 'sand_3', 'silt_1', 'silt_2', 'silt_3', 'clay_1', \n",
     "#              'clay_2', 'clay_3']\n",
-    "keep_cols = ['avg_soilM_l3', 'average_adjacent', 'precip.cm', 'tair.C', 'rh.pct', 'wind_sp.m_per_s', \n",
+    "keep_cols = ['avg_soilM', 'ndre_val', 'precip.cm', 'tair.C', 'rh.pct', 'wind_sp.m_per_s', \n",
     "             'irradiance.w_per_m.2', 'avg_clay', 'avg_sand', 'avg_silt']\n",
     "\n",
-    "dataset = ndre_data_lag_[keep_cols]\n",
+    "dataset = ndre_data_lag_40_EXACT[keep_cols]\n",
     "\n",
     "X = dataset.iloc[:,1:]\n",
     "X = X.values\n",
@@ -165,14 +372,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# split data into train and test sets\n",
     "seed = 7\n",
-    "test_size = 0.20\n",
+    "test_size = 0.2\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size, random_state=seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(256, 9)\n",
+      "(64, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train.shape)\n",
+    "print(X_test.shape)"
    ]
   },
   {
@@ -184,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,18 +435,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_X = X.mean(axis=0)\n",
+    "std_X = X.std(axis=0)\n",
+    "\n",
+    "X_train = (X - mean_X) / std_X\n",
+    "X_train = X_train.astype('float32')\n",
+    "\n",
+    "\n",
+    "mean_y = y.mean(axis=0)\n",
+    "std_y = y.std(axis=0)\n",
+    "y_train = (y - mean_y) / std_y\n",
+    "y_train = y_train.astype('float32')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(248, 9)\n",
-      "(63, 9)\n",
+      "(320, 9)\n",
+      "(64, 9)\n",
       "\n",
-      "(248,)\n",
-      "(63,)\n"
+      "(320,)\n",
+      "(64,)\n"
      ]
     }
    ],
@@ -1647,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1664,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1683,16 +1928,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'MAPE: 0.1305 ± 0.0174'"
+       "'MAPE: 0.1296 ± 0.0157'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1702,17 +1947,17 @@
        "'MAE: 0.0273 ± 0.0029'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "'RMSE: 0.0366 ± 0.0043'"
+       "'RMSE: 0.0364 ± 0.0041'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1721,6 +1966,37 @@
     "'MAPE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mape0)), np.std(np.asarray(mape0)))\n",
     "'MAE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mae0)), np.std(np.asarray(mae0)))\n",
     "'RMSE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(rmse0)), np.std(np.asarray(rmse0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = dict(colsample_bytree=0.63, gamma=0.479, learning_rate=0.26, max_depth=9, \n",
+    "                     min_child_weight=6, n_estimators=2700, reg_alpha = 0.011, subsample=0.37)\n",
+    "model = XGBRegressor(**params)\n",
+    "\n",
+    "final_model = model.fit(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(final_model, open('../data/results_data/models/xgBoost.bin', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_loaded_model = pickle.load(open('../data/results_data/models/xgBoost.bin', 'rb'))"
    ]
   },
   {
