added the rest of the figures for the poster

--- a/jupyter_notebooks/XGBoost_soilM_model.ipynb
+++ b/jupyter_notebooks/XGBoost_soilM_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -362,7 +362,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1956,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1973,55 +1973,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "keep_cols = ['avg_soilM', 'average_adjacent', 'precip.cm', 'tair.C', 'rh.pct', 'wind_sp.m_per_s', \n",
+    "keep_cols = ['avg_soilM', 'ndre_val', 'precip.cm', 'tair.C', 'rh.pct', 'wind_sp.m_per_s', \n",
     "             'irradiance.w_per_m.2', 'avg_clay', 'avg_sand', 'avg_silt']\n",
-    "\n",
-    "dataset = ndre_data_lag_40[keep_cols]\n",
+    " \n",
+    "dataset = ndre_data_lag_40_EXACT[keep_cols]\n",
     "\n",
     "X = dataset.iloc[:,1:]\n",
     "X = X.values\n",
     "y = dataset.iloc[:,0]\n",
     "y = y.values\n",
     "\n",
-    "mape0, mae0, rmse0 = xgb_iter(X, y, itera=50, params=params)"
+    "mape0, mae0, rmse0 = xgb_iter(X, y, itera=100, params=params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'MAPE: 0.1296 ± 0.0157'"
+       "'MAPE: 0.1323 ± 0.0189'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "'MAE: 0.0273 ± 0.0029'"
+       "'MAE: 0.0275 ± 0.0030'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "'RMSE: 0.0364 ± 0.0041'"
+       "'RMSE: 0.0374 ± 0.0049'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2030,6 +2030,16 @@
     "'MAPE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mape0)), np.std(np.asarray(mape0)))\n",
     "'MAE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(mae0)), np.std(np.asarray(mae0)))\n",
     "'RMSE: {0:0.4f} ± {1:0.4f}'.format(np.mean(np.asarray(rmse0)), np.std(np.asarray(rmse0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xg_mae_df = pd.DataFrame({'xg_mae': mae0})\n",
+    "xg_mae_df.to_csv('../data/results_data/xg_mae_df_results.csv')"
    ]
   },
   {
